# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yml  spec.yml
.github/workflows/: general.yml
configuration/: base.yml
scripts/: init_db.sh
src/: configurations.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
