[package]
name = "zero2prod"
authors = ["Yago Iglesias <yago.iglesias.vazquez@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
poath = "src/lib.rs"

[dependencies]
actix-web = "4.3.1"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
path = "src/main.rs"
name = "zero2prod"
